--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^1.10.0",
     "buffer": "^6.0.3",
+    "emoji-picker-react": "^4.12.3",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-sketch-canvas": "^6.2.0",
     "simple-peer": "^9.11.1",
