--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "framer-motion": "^12.23.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.525.0",
+    "moment": "^2.30.1",
     "peerjs": "^1.5.2",
     "process": "^0.11.10",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
