--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
