--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "emoji-picker-react": "^4.12.3",
     "framer-motion": "^12.23.0",
     "html2canvas": "^1.4.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "peerjs": "^1.5.2",
