--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ PORT=5000
 JWT_SECRET=your_jwt_secret_key
 EMAIL_USER=asteinwords@gmail.com
 EMAIL_PASS=54321@@aa
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
