Otp verification added

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
 MONGO_URI=mongodb+srv://asteinwords:xSq7OdG7cQjfjnWz@cluster0.zq6rnxp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=your_jwt_secret_key
-EMAIL_USER=asteinwords@gmail.com
-EMAIL_PASS=54321@@aa
 JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
+SMTP_USER=94d12f001@smtp-brevo.com
+SMTP_PASS=pxWCFmkB7UJTdR4t
+EMAIL_FROM=asteinwords@gmail.com
+CLIENT_URL=http://localhost:5173
