--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
@@ -22,6 +23,8 @@
     "node-cron": "^4.2.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.5",
+    "path": "^0.12.7",
+    "path-to-regexp": "^8.2.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
