--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,4 @@ JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
 SMTP_USER=94d12f001@smtp-brevo.com
 SMTP_PASS=pxWCFmkB7UJTdR4t
 EMAIL_FROM=asteinwords@gmail.com
-CLIENT_URL=https://celebrated-kheer-583a17.netlify.app/
+CLIENT_URL=https://fancy-kitsune-3545b7.netlify.app
