--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "peerjs": "^1.5.2",
     "process": "^0.11.10",
     "react": "^19.1.0",
