--- a/server/.env
+++ b/server/.env
@@ -5,5 +5,5 @@ JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
 SMTP_USER=94d12f001@smtp-brevo.com
 SMTP_PASS=pxWCFmkB7UJTdR4t
 EMAIL_FROM=asteinwords@gmail.com
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://whimsical-mermaid-219ac3.netlify.app
 SUPPORT_EMAIL=asteinwords@gmail.com
