--- a/server/.env
+++ b/server/.env
@@ -5,5 +5,5 @@ JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
 SMTP_USER=94d12f001@smtp-brevo.com
 SMTP_PASS=pxWCFmkB7UJTdR4t
 EMAIL_FROM=asteinwords@gmail.com
-CLIENT_URL=https://lambent-rugelach-8c6c7f.netlify.app
+CLIENT_URL=https://sage-zuccutto-011bda.netlify.app
 SUPPORT_EMAIL=asteinwords@gmail.com
